# libSGM

./: CMakeLists.txt
pysgm/: pysgm.cpp
sample/: pysgm_test_opencv_wrap.py  pysgm_test_raw.py
